Fix [Artifacts]  Align 'Name' column in Artifacts and ML function view (#1601)

--- a/src/components/DetailsResults/detailsResults.scss
+++ b/src/components/DetailsResults/detailsResults.scss
@@ -19,6 +19,7 @@
     &__row {
       display: flex;
       min-width: 100%;
+      min-height: 50px;
       border-bottom: $secondaryBorder;
 
       &:hover {
@@ -26,7 +27,7 @@
       }
 
       & > *:first-child {
-        margin-left: 15px;
+        margin-left: 10px;
       }
     }
 
@@ -47,10 +48,14 @@
 
       &-item {
         position: relative;
-        min-width: 150px;
+        min-width: 140px;
 
         @include tableDet;
-        @include tableHeader(8px, 15px, 8px, 30px);
+        @include tableHeader(8px, 5px, 8px, 20px);
+
+        & > :first-child {
+          padding-left: 5px;
+        }
       }
 
       .results-table__row {
@@ -64,9 +69,14 @@
       display: flex;
       flex: 0 0 auto;
       flex-direction: column;
-      min-width: 150px;
+      justify-content: center;
+      min-width: 140px;
       margin: 0 1px;
-      padding: 19px 15px 19px 30px;
+      padding: 8px 5px 8px 20px;
+
+      & > :first-child {
+        padding-left: 5px;
+      }
     }
 
     .table__cell-wide {
@@ -85,16 +95,14 @@
 
     &__medal {
       position: relative;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
 
       .best-iteration {
         position: absolute;
         top: auto;
         bottom: auto;
-        left: 3px;
+        left: 0;
         margin-top: 2px;
+        padding: 0;
       }
     }
   }
